appId: org.example.project
---
# Scénario 2 : Mauvais pokémon

- launchApp

- waitForAnimationToEnd

- assertVisible:
    text: "Devinez le Pokémon !"

- assertVisible:
    text: "Nom du Pokémon"

- assertVisible:
    text: "Valider"

- assertVisible:
    text: "Score: 0"

- tapOn:
    text: "Nom du Pokémon"
- inputText: "Charizard"

- tapOn:
    text: "Valider"

- assertVisible:
    text: "Incorrect. Le bon nom est Pikachu"

- assertVisible:
    text: "Score: 0"
